# xmd

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
fastmd/: CMakeLists.txt
fastmd/data/models/: 9aac.yml  agli.map.yml
fastmd/data/params/MJ96/: parameters.yml
fastmd/data/params/defaults/: amino-acids.yml
fastmd/src/: config.h  kernel.cu  main.cpp  vec3.h  vec3.inl
fastmd/src/files/: csv.cpp  csv.h  map_file.cpp  map_file.h  pdb.h
fastmd/src/model/: model.h
fastmd/src/tasks/forces/: qa.h
fastmd/src/types/: amino_acid.h  amino_acid.inl  vec3.h  vec3.inl
fastmd/src/univ/: alloc.h  alloc.inl  amino_acid.h  amino_acid.inl  list.h  list.inl  scalar3.h  scalar3.inl  tuple.h  tuple.inl  vector.h  vector.inl  vector3.h
fastmd/src/univ/detail/: vector3.inl
fastmd/src/utils/: amino_acid.h
fastmd/src/utils/detail/: amino_acid.inl
fastmd/src/vm/: alloc.h  alloc.inl  cyclic_list.h  device_list.h  device_list.inl  hybrid_list.h  hybrid_list.inl  list.h  list.inl  set.h
sandbox/: CMakeLists.txt  cparse-test.cpp  main.cpp  omp.cpp  ref.cpp  reference.cpp  taskflow.cpp  test.cpp
sandbox/data/examples/: defaults.yml
sandbox/data/examples/glut/: agli.map.yml  lmwc.map.yml  yhmc.map.yml  yhmn.map.yml
sandbox/data/params/MDCG/: mj-matrix.csv
sandbox/data/params/MJ96/: mj-matrix.csv
sandbox/data/params/defaults/: amino-acids.yml  angle.csv  dihedral.csv
xmd/: CMakeLists.txt  experiments.cpp  main.cpp
xmd/base/: CMakeLists.txt
xmd/base/include/xmd/: math.h
xmd/base/src/files/: csv.cpp  fields.cpp  map_file.h  param_file.cpp  pdb.cpp  records.h  seq_file.cpp
xmd/base/src/model/: box.cpp  model.cpp
xmd/base/src/types/: amino_acid.cpp
xmd/base/src/utils/: stats.cpp  units.cpp
xmd/cmake/: FindSphinx.cmake
xmd/cpu_ref/: CMakeLists.txt
xmd/cpu_ref/include/xmd/: box.h  nl.h
xmd/data/examples/: defaults.yml
xmd/data/examples/9aac/: mj-matrix.csv
xmd/data/examples/glut/: xhmc.map.yml
xmd/data/models/: glut.yml  lmwc.map.yml  xhmc.map.yml  xhmn.map.yml  ygli.map.yml  yhmc.map.yml  yhmn.map.yml
xmd/data/params/MD05/: parameters.yml
xmd/data/params/MDCG/: parameters.yml
xmd/data/params/MJ96/: ss-pairs.csv
xmd/data/params/defaults/: amino-acids.yml  angle.csv  dihedral.csv  parameters.yml  ss-pairs.csv
xmd/docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
xmd/docs/src/: namespace.rst
xmd/examples/1ubq/: simulation.yml
xmd/examples/9aac/: simulation.yml
xmd/examples/glut/: agli.map.yml  glut.yml  xhmn.map.yml
xmd/ext/ESBTL/: CMakeLists.txt
xmd/ext/cparse/: CMakeLists.txt
xmd/ext/cparse/src/: builtin-features.cpp
xmd/ext/eigen-3.4.0/: CMakeLists.txt
xmd/ext/gentypes/: .clang-format  CMakeLists.txt  Makefile  emit.py
xmd/ext/gentypes/_extras/: factory.h.j2  meta.j2
xmd/ext/gentypes/_templates/: allocator.h.j2  array.h.j2  const_iterator.h.j2  const_ptr.h.j2  const_ref.h.j2  const_span.h.j2  expr.h.j2  gentype.h.j2  inst.h.j2  iterator.h.j2  memory.h.j2  meta.h.j2  ptr.h.j2  ref.h.j2  set.h.j2  span.h.j2  vector.h.j2
xmd/ext/taskflow/doxygen/: cppreference-doxygen-web.tag.xml
xmd/ideal/: CMakeLists.txt
xmd/ideal/src/: main.cpp
xmd/include/xmd/ctx/: context.h
xmd/include/xmd/dynamics/: lang_leapfrog.h  lang_pc.h  reduce_vf.h  reduce_vf_omp.h  reset_thread_vf.h  reset_vf.h  set_initial_vel.h  setup_vf_omp.h
xmd/include/xmd/files/: csv.h  param_file.h  pdb.h  seq_file.h
xmd/include/xmd/forces/: all.h  chiral.h  force_afm.h  go.h  native_ss.h  pauli.h  solid_wall.h  tether.h  velocity_afm.h
xmd/include/xmd/freeform/: main.h  params.h
xmd/include/xmd/io/: create_checkpoint.h  export_pdb.h  report_stats.h  report_structure.h  show_progress_bar.h  stats_reporter.h
xmd/include/xmd/model/: box.h  loader.h  model.h  native_contact.h  native_contacts.h
xmd/include/xmd/nl/: data.h  divide_into_cells.h  legacy_update.h  pair.h  verify.h
xmd/include/xmd/params/: defaults.h  param_entry.h  param_file.h  param_node.h  yaml_fs_node.h
xmd/include/xmd/random/: rand_gen.h  xorshift64.h
xmd/include/xmd/stats/: asphericity.h  gyration.h  rmsd.h  total_energy.h  total_force.h
xmd/include/xmd/store/: store.h
xmd/include/xmd/types/: amino_acid.h  array.h  cyclic_buffer.h  scalar.h  span.h  vec3.h  vec3_.h  vector.h
xmd/include/xmd/utils/: convert.h  geometry.h  math.h  serialization.h  stats.h  text.h  units.h  yaml.h
xmd/include/xmd/vm/: path.h  vm.h
xmd/ref/: CMakeLists.txt
xmd/ref/src/dynamics/: lang_pc.cpp  leapfrog.cpp  pc.cpp  reset_vf.cpp
xmd/ref/src/forces/: go.cpp  langevin.cpp  native_ss.cpp  pauli.cpp  (+1 more)
xmd/ref_impl/: CMakeLists.txt
xmd/src/: main.cpp
xmd/src/ctx/: context.cpp
xmd/src/dynamics/: lang_leapfrog.cpp  lang_pc.cpp  reduce_vf.cpp  reduce_vf_omp.cpp  reset_thread_vf.cpp  reset_vf.cpp  setup_vf_omp.cpp
xmd/src/files/: csv.cpp  csv.h  fields.cpp  fields.h  map_file.cpp  map_file.h  param_file.cpp  param_file.h  pdb.cpp  pdb.h  records.cpp  records.h  seq_file.cpp  seq_file.h
xmd/src/forces/: chiral.cpp  force_afm.cpp  go.cpp  go_model.h  lj.h  native_ss.cpp  pauli.cpp  pauli.h  pid.h  qa.h  solid_wall.cpp  tether.cpp  tether.h  velocity_afm.cpp
xmd/src/freeform/: defaults.cpp  defaults.h  defaults.yml  main.cpp  params.cpp
xmd/src/io/: create_checkpoint.cpp  export_pdb.cpp  report_stats.cpp  report_structure.cpp  show_progress_bar.cpp  stats_reporter.cpp
xmd/src/meta/: const_ref.h  generics.h  list.h  ref.h
xmd/src/model/: box.cpp  box.h  loader.cpp  model.cpp  model.h  native_contacts.cpp
xmd/src/nl/: data.cpp  divide_into_cells.cpp  legacy_update.cpp  pair.cpp  verify.cpp
xmd/src/params/: defaults.cpp  defaults.yml  param_entry.cpp  param_file.cpp  param_node.cpp  yaml_fs_node.cpp  yaml_merge.cpp  yaml_merge.h
xmd/src/random/: nr_device.h
xmd/src/stats/: asphericity.cpp  gyration.cpp  rmsd.cpp  total_energy.cpp
xmd/src/store/: store.cpp
xmd/src/types/: amino_acid.cpp  amino_acid.h  array.h  functors.h  vec3.cpp  vec3.h  vector3.h
xmd/src/utils/: param_entry.cpp  stats.cpp  text.cpp  units.cpp  yaml.cpp
xmd/src/vm/: path.cpp  vm.cpp
(+340 files in other folders)
